@@ -1,24 +1,23 @@
-
 /*
- * The Unified Mapping Platform (JUMP) is an extensible, interactive GUI 
+ * The Unified Mapping Platform (JUMP) is an extensible, interactive GUI
  * for visualizing and manipulating spatial features with geometry and attributes.
  *
  * Copyright (C) 2003 Vivid Solutions
- * 
+ *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
  * as published by the Free Software Foundation; either version 2
  * of the License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- * 
+ *
  * For more information, contact:
  *
  * Vivid Solutions
@@ -33,6 +32,7 @@
 
 package com.vividsolutions.jump.util;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 import org.locationtech.jts.util.Assert;
@@ -41,162 +41,174 @@ import org.locationtech.jts.util.Assert;
 /**
  *  A Map whose values are Collections.
  */
-public class CollectionMap<U,V> implements Map<U,Collection<V>> {
+public class CollectionMap<K,V> implements Map<K,Collection<V>> {
 
-    private Map<U,Collection<V>> map;
-    private Class collectionClass = ArrayList.class;
+  private Map<K,Collection<V>> map;
+  private Class<? extends Collection> collectionClass = ArrayList.class;
 
-    /**
-     * Creates a CollectionMap backed by the given Map class.
-     * @param mapClass a Class that implements Map
-     */
-    public CollectionMap(Class mapClass) {
-        try {
-            map = (Map<U,Collection<V>>)mapClass.newInstance();
-        } catch (InstantiationException|IllegalAccessException e) {
-            Assert.shouldNeverReachHere();
-        }
+  /**
+   * Creates a CollectionMap backed by the given Map class.
+   * @param mapClass a Class that implements Map
+   */
+  public CollectionMap(Class<? extends Map> mapClass) {
+    try {
+      map = mapClass.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e) {
+      Assert.shouldNeverReachHere();
     }
-    
-    public CollectionMap(Class mapClass, Class collectionClass) {
-        this.collectionClass = collectionClass;
-        try {
-            map = (Map<U,Collection<V>>) mapClass.newInstance();
-        } catch (InstantiationException|IllegalAccessException e) {
-            Assert.shouldNeverReachHere();
-        }
-    }    
+  }
 
-    /**
-     * Creates a CollectionMap.
-     */
-    public CollectionMap() {
-        this(HashMap.class);
+  public CollectionMap(Class<? extends Map> mapClass, Class<Collection> collectionClass) {
+    this.collectionClass = collectionClass;
+    try {
+      map = mapClass.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e) {
+      Assert.shouldNeverReachHere();
     }
-    
-    private Collection<V> getItemsInternal(U key) {
-        Collection<V> collection = map.get(key);
-        if (collection == null) {
-            try {
-                collection = (Collection<V>) collectionClass.newInstance();
-            } catch (InstantiationException|IllegalAccessException e) {
-                Assert.shouldNeverReachHere();
-            }
-            map.put(key, collection);
-        }
-        return collection;
-    }
+  }
 
-    /**
-     * Adds the item to the Collection at the given key, creating a new Collection if
-     * necessary.
-     * @param key the key to the Collection to which the item should be added
-     * @param item the item to add
-     */
-    public void addItem(U key, V item) {
-        getItemsInternal(key).add(item);
-    }
-    
-    public void removeItem(U key, V item) {
-        getItemsInternal(key).remove(item);
-    }
+  /**
+   * Creates a CollectionMap.
+   */
+  public CollectionMap() {
+    this(HashMap.class);
+  }
 
-    public void clear() {
-        map.clear();
+  private Collection<V> getItemsInternal(K key) {
+    Collection<V> collection = map.get(key);
+    if (collection == null) {
+      try {
+        collection = collectionClass.getDeclaredConstructor().newInstance();
+      } catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e) {
+        e.printStackTrace();
+        Assert.shouldNeverReachHere();
+      }
+      map.put(key, collection);
     }
+    return collection;
+  }
 
-    /**
-     * Adds the items to the Collection at the given key, creating a new Collection if
-     * necessary.
-     * @param key the key to the Collection to which the items should be added
-     * @param items the items to add
-     */
-    public void addItems(U key, Collection<V> items) {
-        for (V item : items) {
-            addItem(key, item);
-        }
-    }
-    
-    public void addItems(CollectionMap<U,V> other) {
-        for (U key : other.keySet()) {
-            addItems(key, other.getItems(key));
-        }
-    }
+  /**
+   * Adds the item to the Collection at the given key, creating a new Collection if
+   * necessary.
+   * @param key the key to the Collection to which the item should be added
+   * @param item the item to add
+   */
+  public void addItem(K key, V item) {
+    getItemsInternal(key).add(item);
+  }
 
-    /**
-     * Returns the values.
-     * @return a view of the values, backed by this CollectionMap
-     */
-    public Collection<Collection<V>> values() {
-        return map.values();
-    }
+  public void removeItem(K key, V item) {
+    getItemsInternal(key).remove(item);
+  }
 
-    /**
-     * Returns the keys.
-     * @return a view of the keys, backed by this CollectionMap
-     */
-    public Set<U> keySet() {
-        return map.keySet();
-    }
+  @Override
+  public void clear() {
+    map.clear();
+  }
 
-    /**
-     * Returns the number of mappings.
-     * @return the number of key-value pairs
-     */
-    public int size() {
-        return map.size();
+  /**
+   * Adds the items to the Collection at the given key, creating a new Collection if
+   * necessary.
+   * @param key the key to the Collection to which the items should be added
+   * @param items the items to add
+   */
+  public void addItems(K key, Collection<V> items) {
+    for (V item : items) {
+      addItem(key, item);
     }
+  }
 
-    public Collection<V> get(Object key) {
-        try {
-            return getItems((U)key);
-        } catch(ClassCastException e) {
-            return null;
-        }
+  public void addItems(CollectionMap<K,V> other) {
+    for (K key : other.keySet()) {
+      addItems(key, other.getItems(key));
     }
+  }
 
-    public Collection<V> getItems(U key) {
-        return Collections.unmodifiableCollection(getItemsInternal(key));
+  /**
+   * Returns the values.
+   * @return a view of the values, backed by this CollectionMap
+   */
+  @Override
+  public Collection<Collection<V>> values() {
+    return map.values();
+  }
+
+  /**
+   * Returns the keys.
+   * @return a view of the keys, backed by this CollectionMap
+   */
+  @Override
+  public Set<K> keySet() {
+    return map.keySet();
+  }
+
+  /**
+   * Returns the number of mappings.
+   * @return the number of key-value pairs
+   */
+  @Override
+  public int size() {
+    return map.size();
+  }
+
+  @Override
+  public Collection<V> get(Object key) {
+    try {
+      return getItems((K)key);
+    } catch(ClassCastException e) {
+      return null;
     }
+  }
 
-    public Collection<V> remove(Object key) {
-        return map.remove(key);
+  public Collection<V> getItems(K key) {
+    return Collections.unmodifiableCollection(getItemsInternal(key));
+  }
+
+  @Override
+  public Collection<V> remove(Object key) {
+    return map.remove(key);
+  }
+
+  @Override
+  public boolean containsKey(Object key) {
+    return map.containsKey(key);
+  }
+
+  @Override
+  public boolean containsValue(Object value) {
+    return map.containsValue(value);
+  }
+
+  @Override
+  public Set<Entry<K, Collection<V>>> entrySet() {
+    return map.entrySet();
+  }
+
+  @Override
+  public boolean isEmpty() {
+    return map.isEmpty();
+  }
+
+  @Override
+  public Collection<V> put(K key, Collection<V> value) {
+    return map.put(key, value);
+  }
+
+  @Override
+  public void putAll(Map<? extends K, ? extends Collection<V>> map) {
+    for (K key : map.keySet()) {
+      //Delegate to #put so that the assertion is made. [Jon Aquino]
+      put(key, map.get(key));
     }
+  }
 
-    public boolean containsKey(Object key) {
-        return map.containsKey(key);
-    }
+  public void removeItems(K key, Collection<V> items) {
+    getItemsInternal(key).removeAll(items);
+  }
 
-    public boolean containsValue(Object value) {
-        return map.containsValue(value);
-    }
-
-    public Set<Map.Entry<U,Collection<V>>> entrySet() {
-        return map.entrySet();
-    }
-
-    public boolean isEmpty() {
-        return map.isEmpty();
-    }
-
-    public Collection<V> put(U key, Collection<V> value) {
-        //Assert.isTrue(value instanceof Collection);
-        return map.put(key, value);
-    }
-
-    public void putAll(Map<? extends U, ? extends Collection<V>> map) {
-        for (U key : map.keySet()) {
-            //Delegate to #put so that the assertion is made. [Jon Aquino]
-            put(key, map.get(key));
-        }
-    }
-
-    public void removeItems(U key, Collection<V> items) {
-        getItemsInternal(key).removeAll(items);
-    }
-
-	public Map getMap() {
-		return map;
-	}
+  public Map<K,? extends Collection<V>> getMap() {
+    return map;
+  }
 
 }
